# ChangeLog for dev-perl/Audio-Scan
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Audio-Scan/ChangeLog,v 1.20 2011/04/24 16:01:10 grobian Exp $

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org> Audio-Scan-0.840.ebuild:
  Marked ~x86-solaris, bug #296509

*Audio-Scan-0.870.0 (22 Mar 2011)

  22 Mar 2011; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.870.0.ebuild:
  Version bump

*Audio-Scan-0.860.0 (19 Mar 2011)

  19 Mar 2011; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.860.0.ebuild:
  Version bump

*Audio-Scan-0.850 (01 Feb 2011)
*Audio-Scan-0.840 (01 Feb 2011)

  01 Feb 2011; Torsten Veller <tove@gentoo.org> -Audio-Scan-0.85.ebuild,
  +Audio-Scan-0.840.ebuild, +Audio-Scan-0.850.ebuild:
  Add 0.84 again for the new squeezeboxserver-7.5.3 (#353376). Version
  conversion

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Audio-Scan-0.59.ebuild,
  -Audio-Scan-0.62.ebuild, -Audio-Scan-0.83.ebuild, -Audio-Scan-0.84.ebuild:
  Cleanup

*Audio-Scan-0.85 (10 Sep 2010)

  10 Sep 2010; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.85.ebuild:
  Version bump

*Audio-Scan-0.84 (28 Aug 2010)

  28 Aug 2010; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.84.ebuild:
  Version bump

*Audio-Scan-0.83 (12 Jun 2010)

  12 Jun 2010; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.83.ebuild:
  Version bump

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -Audio-Scan-0.75.ebuild,
  -Audio-Scan-0.77.ebuild, -Audio-Scan-0.78.ebuild, -Audio-Scan-0.79.ebuild,
  -Audio-Scan-0.81.ebuild:
  Cleanup

*Audio-Scan-0.82 (28 May 2010)

  28 May 2010; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.82.ebuild:
  Version bump

*Audio-Scan-0.81 (16 May 2010)

  16 May 2010; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.81.ebuild:
  Version bump

*Audio-Scan-0.62 (11 May 2010)

  11 May 2010; Torsten Veller <tove@gentoo.org> +Audio-Scan-0.62.ebuild:
  Add old version for media-sound/squeezeboxserver-7.5.0 (#319203)
