@@ -1,0 +1,26 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Audio-Scan/Attic/Audio-Scan-0.880.0.ebuild,v 1.1 2011/07/21 17:49:35 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=AGRUNDMA
+MODULE_VERSION=0.88
+inherit perl-module
+
+DESCRIPTION="Fast C metadata and tag reader for all common audio file formats"
+
+LICENSE="|| ( GPL-2 GPL-3 )" # GPL-2+
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="test"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	test? (
+		dev-perl/Test-Warn
+	)"
+#		dev-perl/Test-Pod
+#		dev-perl/Test-Pod-Coverage"
+
+SRC_TEST=do
